Rev. 3.2: Korrekturen im Diskussionsteil und im Acronym.

--- a/Diskussion.tex
+++ b/Diskussion.tex
@@ -91,13 +91,13 @@ Die Differenz der Schwellenergebnisse entspricht in etwa auch der zwischen den d
 	\end{center}
 \end{table}
 %
-Tab. \ref{tab:tabelle9} zeigt, dass die Herzfrequenzen der Trainingszonen entsprechend der zwei VT2-Ergebnisse ebenfalls um ca. \SI{11}{\per\minute} voneinander abweichen. In den Trainingszonen mit relativ großen Intervallen (\gls{REKOM}, \gls{GA1} und \gls{GA2}) dürfte sich diese Differenz in der Praxis weniger signifikant auf den Trainingserfolg auswirken, da die \gls{HF} schwierig innerhalb eines kleinen Intervalls zu halten ist. Im Leistungsbereich ist die Differenz kritisch, da das Training innerhalb des Bereichs nach Rater 1 z.B. als Teil einer Wettkampfvorbereitung zu ineffektiv wäre, falls die VT2 zu niedrig bestimmt wurde.\\
-Für Probandin 6w entstand eine ähnliche Differenz der Ergebnisse, obwohl dort ein eindeutiger Anstieg des \gls{EQCO2} zu sehen ist (siehe Abb. \ref{pic:pic17}). Rater 1 detektierte die VT2 eine Stufe früher, wo bereits ein \gls{EQCO2}-Anstieg in der orangen Kurve zu sehen ist. Dieser war für Rater 2 scheinbar noch nicht signifikant. Die Software bestimmte die VT2 später, da der Wert mit den Referenzdaten der HUNT 3 Studie mehr übereinstimmte. Vergleicht man die VT2 von Rater 1 bei \SI{130}{\per\minute} mit der \gls{HFmax} der Probandin bei \SI{178}{\per\minute}, entspricht die Schwelle 73~\%~\gls{HFmax}. Laut der HUNT 3 Studie liegt die durchschnittliche VT2 für gesunde Frauen zwischen 40 und 49 Jahren bei 90~\%~\gls{HFmax}$\pm$6. Dementsprechend ist die VT2 von Rater 1 zu früh bestimmt worden.\\
-Für Proband 11m (26 Jahre) entspricht die VT2 nach Rater 1 83,7~\%~\gls{HFmax} und nach Rater 2 89,9~\%~\gls{HFmax} (vgl. Tab. \ref{tab:tabelle4}). Verglichen mit der durchschnittlichen VT2 für gesunde Männer zwischen 20 und 29 Jahren mit 87,8~\%~\gls{HFmax}$\pm$5,4 lägen wiederum beide Ergebnisse trotz Differenz innerhalb des Durchschnitts. Die eigene Aussage des Probanden über den Trainingszustand lies Rater 1 hier zur niedrigen VT2 tendieren. Wahrscheinlich ist auch hier, dass die VT2 nach Rater 2 und Software näher am Realitätszustand der Person liegt.
+Tab. \ref{tab:tabelle9} zeigt, dass die Herzfrequenzen der Trainingszonen entsprechend der zwei VT2-Ergebnisse ebenfalls um ca. \SI{11}{\per\minute} voneinander abweichen. In den Trainingszonen mit relativ großen Intervallen (\gls{REKOM}, \gls{GA1} und \gls{GA2}) dürfte sich diese Differenz in der Praxis weniger signifikant auf den Trainingserfolg auswirken, da die \gls{HF} schwierig innerhalb eines kleinen Intervalls zu halten ist. Im Leistungsbereich ist die Differenz kritisch, da das Training innerhalb des Bereichs nach Rater~1 z.B. als Teil einer Wettkampfvorbereitung zu ineffektiv sein könnte, falls die VT2 zu niedrig bestimmt wurde.\\
+Für Probandin 6w entstand eine ähnliche Differenz der Ergebnisse, obwohl dort ein eindeutiger Anstieg des \gls{EQCO2} zu sehen ist (siehe Abb. \ref{pic:pic17}). Rater~1 detektierte die VT2 eine Stufe früher, wo bereits ein \gls{EQCO2}-Anstieg in der orangen Kurve zu sehen ist. Dieser war für Rater~2 scheinbar noch nicht signifikant. Die Software bestimmte die VT2 später, da der Wert mit den Referenzdaten der HUNT 3 Studie mehr übereinstimmte. Vergleicht man die VT2 von Rater~1 bei \SI{130}{\per\minute} mit der \gls{HFmax} der Probandin bei \SI{178}{\per\minute}, entspricht die Schwelle 73~\%~\gls{HFmax}. Laut der HUNT 3 Studie liegt die durchschnittliche VT2 für gesunde Frauen zwischen 40 und 49 Jahren bei 90~\%~\gls{HFmax}$\pm$6. Dementsprechend ist die VT2 von Rater~1 zu früh bestimmt worden.\\
+Für Proband 11m (26 Jahre) entspricht die VT2 nach Rater~1 83,7~\%~\gls{HFmax} und nach Rater~2 89,9~\%~\gls{HFmax} (vgl. Tab. \ref{tab:tabelle4}). Verglichen mit der durchschnittlichen VT2 für gesunde Männer zwischen 20 und 29 Jahren mit 87,8~\%~\gls{HFmax}$\pm$5,4 lägen wiederum beide Ergebnisse trotz Differenz innerhalb des Durchschnitts. Die eigene Aussage des Probanden über den Trainingszustand lies Rater~1 hier zur niedrigen VT2 tendieren. Wahrscheinlich ist auch hier, dass die VT2 nach Rater~2 und Software näher am Realitätszustand der Person liegt.
 %
 \subsection{\gls{VE}/\gls{VCO2} als geeignete Referenzmethode}
 %
-Die Abweichungen zwischen Ratern und Software beträgt für diese Methode im Mittel \SI{-4,07}{\per\minute}$\pm$\SI{11}{\per\minute}. Verglichen mit der \gls{EQCO2}-Methode weisen die Ergebnisse größere Unterschiede auf und die Schwellenbestimmungen geschahen weniger eindeutig. Der Korrelationskoeffizient $r$ nimmt den Wert $0,816$ an. 15 von 28 Kurven für diese Methode waren gut. Ein Beispiel bietet Abb. \ref{pic:pic20} von Proband 20m, wo die Zunahme der \gls{VCO2} deutlich zu sehen ist. Rater und Software kamen bei dieser Grafik zu sehr ähnlichen Ergebnissen.\\
+Die Abweichungen zwischen Ratern und Software beträgt für diese Methode im Mittel \SI{-4,07}{\per\minute} $\pm$\SI{11}{\per\minute}. Verglichen mit der \gls{EQCO2}-Methode weisen die Ergebnisse größere Unterschiede auf und die Schwellenbestimmungen geschahen weniger eindeutig. Der Korrelationskoeffizient $r$ nimmt den Wert $0,816$ an. 15 von 28 Kurven für diese Methode waren gut. Ein Beispiel bietet Abb. \ref{pic:pic20} von Proband 20m, wo die Zunahme der \gls{VCO2} deutlich zu sehen ist. Rater und Software kamen bei dieser Grafik zu sehr ähnlichen Ergebnissen.\\
 Einige Kurven waren jedoch kritisch, da nicht differenzierbar. Bei dieser Methode wirkten diese Artefakte sich allerdings nicht so stark auf die Schwellenbestimmung aus, da sie, wie z.B. in Abb. \ref{pic:pic21} zu erkennen, ausschließlich in der ersten Messhälfte auftraten. Im Bereich der VT2 waren die Verläufe der Graphen meistens gut auszuwerten.\\
 Jedoch traten auch in Feld 4 häufiger Plots auf, bei denen die Messpunkte dicht beieinander lagen und nicht genau ersichtlich war, in welcher Stufe der erste Anstieg auftrat. Hier kann beispielhaft Abb. \ref{pic:pic19} von Proband 9m gesichtet werden. Da der Graph in Feld 4 recht linear verläuft, war die subjektive Auswertung erschwert und die Rater bestimmten die VT2 später als die Software, die den Vorteil der mathematisch genauen Detektion der Steigungsänderung innehat.\\
 Für die Auswertung von \gls{VE}/\gls{VCO2} lässt sich schlussfolgern, dass sie in Verbindung mit Mittelwerten und Stufentests erschwert wird, da der Graph anfällig für Artefakte ist. Eine \gls{SD} von $\pm$11 \si{\per\minute} zeigt, dass häufig keine eindeutigen Ergebnisse erzielt werden und diese auch um die mittlere Abweichung sehr stark streuen. Die Software birgt auch bei dieser Methode allerdings den Vorteil, dass die mathematische Bestimmung von Steigungsänderungen gut gelingt und die Methode somit für Vergleiche nutzbar wird. Eine erneute Auswertung mit einem optimierten Algorithmus könnte zu verbesserten und mehr korrelierenden Ergebnissen führen.
@@ -140,8 +140,7 @@ Für die Spiroergometrie existieren keine validen Methoden zur Plausibilitätsko
 \end{flalign}
 %
 \gls{VE} und \gls{VO2} sollen demnach einen idealerweise linearen Verlauf über die Leistung annehmen. Da die Berechnungen jedoch kaum anthropometrischen Daten oder individuellen Trainingszustände einbeziehen, wurde auf die mathematische Art der Überprüfung wegen der großen Varianz an Trainingszuständen in dieser Arbeit verzichtet. Allerdings kann mithilfe eines grafischen Vergleichs der Parameter der Verlauf einer Messung analysiert und bewertet werden.\\
-In den Feldern 5 und 6 der in Kapitel 3 abgebildeten 6-Felder-Grafiken wurden die \gls{VE} und die \gls{VO2} hierfür jeweils der \gls{W} gegenübergestellt. Einige dieser Felder weisen allerdings analoge Schwankungen zu denen in Feld 1 und 4 auf und können empirisch ebenfalls mit der fehlerhafte Atemzugerkennung erklärt werden. Als alternative Plausibilitätskontrolle wurde stattdessen der Vergleich mit den Daten der HUNT 3 Studie angestellt, wie in Tab. \ref{tab:tabelle8} aufgeführt.\\
-In der Tabelle werden die gemessenen \gls{VO2max}-Werte der einzelnen Probanden mit den Referenzwerten der entsprechenden Alterklasse sowie des Geschlechts aus der HUNT 3 Studie verglichen~\cite{Loe.2014}. Von 28 Probanden lagen 13 ober- oder unterhalb des entsprechenden Durchschnitts. Es muss jedoch hier berücksichtigt werden, dass die HUNT 3 Studie auf Laufbändern durchgeführt wurde. Bei der Laufbandergometrie liegt die \gls{VO2max} generell höher, da die Muskelgruppen und deren Wirkungsgrad sich zur Fahrradergometrie unterscheiden~\cite{Kroidl.2015}. Unter diesem Aspekt besteht eine geringere Vergleichbarkeit, da die restlichen 15 Probanden sich jedoch innerhalb des Durchschnittsbereichs bzw. der \gls{SD} befanden, kann diese Kontrolle zumindest differenziert einen Aufschluss über den hinreichenden Abschluss einer Spiroergometrie geben. 
+In den Feldern 5 und 6 der in Kapitel 3 abgebildeten 6-Felder-Grafiken wurden die \gls{VE} und die \gls{VO2} hierfür jeweils der \gls{W} gegenübergestellt. Einige dieser Felder weisen allerdings analoge Schwankungen zu denen in Feld 1 und 4 auf und können empirisch ebenfalls mit der fehlerhafte Atemzugerkennung erklärt werden. Als alternative Plausibilitätskontrolle wurde stattdessen der Vergleich mit den Daten der HUNT 3 Studie angestellt, wie in Tab. \ref{tab:tabelle8} aufgeführt.
 %
 \begin{table}[H]
 	\centering
@@ -185,6 +184,8 @@ In der Tabelle werden die gemessenen \gls{VO2max}-Werte der einzelnen Probanden 
 	\label{tab:tabelle8}
 \end{table}
 %
+In der Tabelle werden die gemessenen \gls{VO2max}-Werte der einzelnen Probanden mit den Referenzwerten der entsprechenden Alterklasse sowie des Geschlechts aus der HUNT 3 Studie verglichen~\cite{Loe.2014}. Von 28 Probanden lagen 13 ober- oder unterhalb des entsprechenden Durchschnitts. Es muss jedoch hier berücksichtigt werden, dass die HUNT 3 Studie auf Laufbändern durchgeführt wurde. Bei der Laufbandergometrie liegt die \gls{VO2max} generell höher, da die Muskelgruppen und deren Wirkungsgrad sich zur Fahrradergometrie unterscheiden~\cite{Kroidl.2015}. Unter diesem Aspekt besteht eine geringere Vergleichbarkeit, da die restlichen 15 Probanden sich jedoch innerhalb des Durchschnittsbereichs bzw. der \gls{SD} befanden, kann diese Kontrolle zumindest differenziert einen Aufschluss über den hinreichenden Abschluss einer Spiroergometrie geben. 
+%
 \section{Potentielle Fehlerquellen bei der Spiroergometrie}
 %
 \subsection{Probandenbedingte Faktoren}
@@ -202,7 +203,7 @@ Wie in Kapitel 2.1.2 erwähnt, sind die Messbedingungen für eine Respirationsan
 \section{Limitation}
 %
 Das Projekt war limitiert durch eine relativ kleine Teilnehmerzahl und dadurch sehr ungleiche Verteilung der unterschiedlichen Probandengruppen. Um die Aussagekraft der Ergebnisse zu erhöhen und diese beispielsweise besser mit der HUNT 3 Studie vergleichen zu können, wäre eine deutlich größere Probandengruppe notwendig gewesen. Die HUNT 3 Studie ist jedoch auch nicht optimal, da die Werte für Fahrrad- und Laufergometrie, wie bereits angedeutet, verschieden sind. Verlässliche Studien zur Fahrradergometrie mit großer Probandenzahl liegen jedoch momentan nicht vor.\\
-Die Evaluierung war auch durch eine kleine Menge an wertenden Personen und einen gleichzeitigen Mangel an validen Referenzwerten eingeschränkt. Generell sind Normwerte im Bereich der Sportwissenschaft schwer zu definieren, da die Individualität an Zuständen zu groß ist. Dies bedeutet, dass bei der Analyse der individuellen Leistungsfähigkeit noch sensibler auf eventuelle Einflussfaktoren eingegangen werden muss, als beispielsweise bei einer rein medizinischen Lungenfunktionsmessung, der einige Normbereiche für z.B. die \gls{FEV1} oder \gls{FVC} zu Grunde liegen, welche anatomisch abgegrenzt sind.
+Die Evaluierung war auch durch eine kleine Menge an wertenden Personen und einen gleichzeitigen Mangel an validen Referenzwerten eingeschränkt. Generell sind Normwerte im Bereich der Sportwissenschaft schwer zu definieren, da die Individualität an Zuständen zu groß ist. Dies bedeutet, dass bei der Analyse der individuellen Leistungsfähigkeit noch sensibler auf eventuelle Einflussfaktoren eingegangen werden muss.
 %
 \section{Ausblick und Handlungsempfehlung}
 %
