--- a/Methode.tex
+++ b/Methode.tex
@@ -117,7 +117,7 @@ In Abb. \ref{pic:pic12} ist die Oberfläche der \gls{CCPS} zu sehen, wie sie wä
 	\label{pic:pic12}
 \end{figure}
 %
-Rechts unten ist mit drei Sekunden Latenz ein Plot mit den \gls{O2}- und \gls{CO2}-Konzentrationen eines Atemzugs eingebunden. Der blaue Graph stellt die \gls{O2}-, der grüne die \gls{CO2}-Konzentration dar. Das große Fenster links oben bildet eine Verlaufsdarstellung mit Mittelwerten bestimmter Parameter ab. Anhand der X-Achse des Koordinatensystems sind Stufennummerierungen zu erkennen. Auf der linken Y-Achse sind die Belastung in \si{\watt} und die \gls{VO2} in \si{\litre\per\minute} und auf der rechten der Puls bzw. die \gls{HF} in \si{\per\minute} und der \gls{RQ} definiert. Im Plot sind in verschiedenen Farben sind die pro Stufe ermittelten Mittelwerte für die \gls{VO2} (blau), den Puls (braun) und den \gls{RQ} (türkis) in Form eines Graphen sowie die während einer Stufe eingestellten Leistung als Balkendiagramm (hellblau). Unterhalb des Plots werden die Durchschnittswerte für besagte Parameter visualisiert, die bei der zuletzt abgeschlossenen Stufe durch die Software ausgewertet wurden. Außerdem werden im unteren Abschnitt des hellblauen Interfaces die während des letzten erkannten Atemzugs berechneten Werte für die \gls{VO2}, \gls{VCO2}, das \gls{AMV} und die \gls{AF} mitgeschrieben. Des Weiteren wird die vom Pulsgurt, via Ergometer an die Software übermittelte \gls{HF} angezeigt. Mithilfe dieses Interfaces konnte der Verlauf der Spiroergometrie überwacht und verfolgt werden. Der Timer half bei der korrekten Durchführung der Atemzugerfassung und die Graphen gaben Aufschluss darüber, ob diese korrekt funktionierte. Die Rohdaten der Sensoren wurden im Hintergrund aufgezeichnet, in \acrshort{CSV}-Dateien abgespeichert und konnten anschließend mit MATLAB ausgewertet werden.
+Rechts unten ist mit drei Sekunden Latenz ein Plot mit den \gls{O2}- und \gls{CO2}-Konzentrationen eines Atemzugs eingebunden. Der blaue Graph stellt die \gls{O2}-, der grüne die \gls{CO2}-Konzentration dar. Das große Fenster links oben bildet eine Verlaufsdarstellung mit Mittelwerten bestimmter Parameter ab. Anhand der X-Achse des Koordinatensystems sind Stufennummerierungen zu erkennen. Auf der linken Y-Achse sind die Belastung in \si{\watt} und die \gls{VO2} in \si{\litre\per\minute} und auf der rechten der Puls bzw. die \gls{HF} in \si{\per\minute} und der \gls{RQ} definiert. Im Plot sind in verschiedenen Farben sind die pro Stufe ermittelten Mittelwerte für die \gls{VO2} (blau), den Puls (braun) und den \gls{RQ} (türkis) in Form eines Graphen sowie die während einer Stufe eingestellten Leistung als Balkendiagramm (hellblau). Unterhalb des Plots werden die Durchschnittswerte für besagte Parameter visualisiert, die bei der zuletzt abgeschlossenen Stufe durch die Software ausgewertet wurden. Außerdem werden im unteren Abschnitt des hellblauen Interfaces die während des letzten erkannten Atemzugs berechneten Werte für die \gls{VO2}, \gls{VCO2}, das \gls{AMV} und die \gls{AF} mitgeschrieben. Des Weiteren wird die vom Pulsgurt, via Ergometer an die Software übermittelte \gls{HF} angezeigt. Mithilfe dieses Interfaces konnte der Verlauf der Spiroergometrie überwacht und verfolgt werden. Die Rohdaten der Sensoren wurden im Hintergrund aufgezeichnet, in \acrshort{CSV}-Dateien abgespeichert und konnten anschließend mit MATLAB\footnote{Programmcode: siehe Anhang C} ausgewertet werden.
 %
 \section{Datenverarbeitung \& Generierung der Plots}
 %
