--- a/Resultate.tex
+++ b/Resultate.tex
@@ -165,7 +165,7 @@ Die vierte Beispielgrafik in Abb. \ref{pic:pic21} zeigt die Ergebnisse des Proba
 \end{table}
 %
 In Tab. \ref{tab:tabelle5} werden die Ergebnisse der VT1-Bestimmung der Rater und der Software für alle 28 Testpersonen verglichen. In sechs Spalten wird, geordnet nach Methode und Rater, die \gls{HF} aufgeführt, die an Stelle der VT1 abgelesen bzw. durch die Software bestimmt wurden. Es werden dabei auch nebeneinander die Methoden in direkte Relation gesetzt. Bei einigen Probanden sind zwischen den jeweiligen Ratern bzw. den beiden Methoden Differenzen zu sehen. Zur Visualisierung der Übereinstimmungen bzw. Unterschiede zwischen den VT1-Ergebnissen von Ratern und Software wurde deshalb für jede Methode ein Netzdiagramm erstellt.\\
-Abb. \ref{pic:pic22} zeigt die Netzdiagramme für die VT1. Abb. \ref{subpic:pic1} vergleicht dabei die \gls{HF} für die VT1, die von Ratern und Software durch den V-Slope bestimmt wurden. In Abb. \ref{subpic:pic2} ist das gleiche für das \gls{EQO2} dargestellt. Eine orthogonale Skala definiert die \gls{HF}, die an konzentrischen Kreisen abgelesen werden kann. Der äußerste Kreis stellt eine zweite Skala dar, welche mit den IDs der Probanden beschriftet ist. Radial sind zu jeder ID die Messwerte in den Diagrammen eingesetzt. Zusammen bilden die Messpunkte ein farbig schraffiertes Netz. Die graue Schraffur visualisiert das Netz des 1. Raters, die rote das des 2. Raters und die grüne die der Software. Unterschiedliche Kontraste markieren Bereiche, in denen sich die individuellen Schwellenbestimmungen überlappen. Überlappen sich rot und schwarz, stimmte die entsprechende VT1 beider Rater weitestgehend überein, bei rot und grün waren die Ergebnisse von Rater 2 und Software gut vergleichbar und bei schwarz und grün lagen Rater 1 und Software dicht beieinander.
+Abb. \ref{pic:pic22} zeigt die Netzdiagramme für die VT1. Abb. \ref{subpic:pic1} vergleicht dabei die \gls{HF} für die VT1, die von Ratern und Software durch den V-Slope bestimmt wurden. In Abb. \ref{subpic:pic2} ist das gleiche für das \gls{EQO2} dargestellt. Eine orthogonale Skala definiert die \gls{HF}, die an konzentrischen Kreisen abgelesen werden kann. Der äußerste Kreis stellt eine zweite Skala dar, welche mit den IDs der Probanden beschriftet ist. Radial sind zu jeder ID die Messwerte in den Diagrammen eingesetzt. Zusammen bilden die Messpunkte ein farbig schraffiertes Netz. Die graue Schraffur visualisiert das Netz des 1. Raters, die rote das des 2. Raters und die grüne das der Software. Unterschiedliche Kontraste markieren Bereiche, in denen sich die individuellen Schwellenbestimmungen überlagern. Überlappen sich rot und schwarz, stimmte die entsprechende VT1 beider Rater weitestgehend überein, bei rot und grün waren die Ergebnisse von Rater 2 und Software gut vergleichbar und bei schwarz und grün lagen Rater 1 und Software dicht beieinander.
 %
 \begin{figure}[H]
 	\centering
@@ -190,7 +190,7 @@ Abb. \ref{pic:pic22} zeigt die Netzdiagramme für die VT1. Abb. \ref{subpic:pic1
 	\centering
 	%\includegraphics[scale=0.7]{Bilder/mean_vslope}
 	\includegraphics[scale=0.95]{Bilder/vslope.eps}
-	\caption[Differenzen der V-Slope-Ergebnisse zwischen Ratern und Software]{Differenzen zwischen den Mittelwerten für die VT1 von Ratern und Software durch V-Slope; Mean = Mittelwert von $\Delta$ Rater-Software, SD~=~Standardabweichung}
+	\caption[Differenzen der V-Slope-Ergebnisse zwischen Ratern und Software]{Differenzen zwischen den Mittelwerten für die VT1 von Ratern und Software durch V-Slope; Mean = Mittelwert der Streuung, SD~=~Standardabweichung}
 	\label{pic:pic23}
 \end{figure}
 %
@@ -198,11 +198,11 @@ Abb. \ref{pic:pic22} zeigt die Netzdiagramme für die VT1. Abb. \ref{subpic:pic1
 	\centering
 	%\includegraphics[scale=0.7]{Bilder/mean_eqo2}
 	\includegraphics[scale=0.95]{Bilder/eqo2.eps}
-	\caption[Differenzen der \gls{EQO2}-Ergebnisse zwischen Ratern und Software]{Differenzen zwischen den Mittelwerten für die VT1 von Ratern und Software durch das \gls{EQO2}; Mean = Mittelwert von $\Delta$ Rater-Software, SD~=~Standardabweichung}
+	\caption[Differenzen der \gls{EQO2}-Ergebnisse zwischen Ratern und Software]{Differenzen zwischen den Mittelwerten für die VT1 von Ratern und Software durch das \gls{EQO2}; Mean = Mittelwert der Streuung, SD~=~Standardabweichung}
 	\label{pic:pic24}
 \end{figure}
 %
-Um zu analysieren, wie stark die Ergebnisse der Rater von denen der Software im Mittel differieren, wurden für beide Methoden Punktdiagramme erstellt, in denen die Differenzen aus den gemittelten VT1-Werten der Rater und der Software gegen die Gesamtmittelwerte für alle 28 Personen aufgetragen wurden. In Abb. \ref{pic:pic23} ist das Diagramm für die V-Slope-Methode abgebildet. Der Mittelwert der Differenzen zwischen Ratern und Software ist als rote Linie ins Diagramm einfügt. Die Werte für die VT1, die von Ratern und Software mittels V-Slope bestimmt wurden, unterscheiden sich durchschnittlich um $3,89$ $\pm$14 Schläge pro Minute.\\
+Um zu analysieren, wie stark die Ergebnisse der Rater von denen der Software im Mittel differieren, wurden für beide Methoden Streudiagramme erstellt, in denen die Differenzen aus den gemittelten VT1-Werten der Rater und der Software gegen die Gesamtmittelwerte für alle 28 Personen aufgetragen wurden. In Abb. \ref{pic:pic23} ist das Diagramm für die V-Slope-Methode abgebildet. Der Mittelwert der Differenzen zwischen Ratern und Software ist als rote Linie ins Diagramm einfügt. Die Werte für die VT1, die von Ratern und Software mittels V-Slope bestimmt wurden, unterscheiden sich durchschnittlich um $3,89$ $\pm$14 Schläge pro Minute.\\
 Abb. \ref{pic:pic24} zeigt das Diagramm für die \gls{EQO2}-Methode mit den Differenzen zwischen Ratern und Software. Dort beträgt diese im Mittel \SI{7,98}{\per\minute} $\pm$14 \si{\per\minute}.
 %
 \subsection{Ergebnisse für VT2}
@@ -279,7 +279,7 @@ Abb. \ref{pic:pic25} zeigt die Netzdiagramme für die VT2-Ergebnisse durch das \
 	\centering
 	%\includegraphics[scale=0.7]{Bilder/mean_eqco2}
 	\includegraphics[scale=0.95]{Bilder/eqco2.eps}
-	\caption[Differenzen der \gls{EQCO2}-Ergebnisse zwischen Ratern und Software]{Differenzen zwischen den Mittelwerten für die VT1 von Ratern und Software durch das \gls{EQCO2}; Mean = Mittelwert von $\Delta$ Rater-Software, SD~=~Standardabweichung}
+	\caption[Differenzen der \gls{EQCO2}-Ergebnisse zwischen Ratern und Software]{Differenzen zwischen den Mittelwerten für die VT1 von Ratern und Software durch das \gls{EQCO2}; Mean = Mittelwert der Streuung, SD~=~Standardabweichung}
 	\label{pic:pic26}
 \end{figure}
 %
@@ -289,7 +289,7 @@ In Abb. \ref{pic:pic26} ist die Streuung der \gls{EQCO2}-Methode dargestellt. Di
 	\centering
 	%\includegraphics[scale=0.7]{Bilder/mean_vevco2}
 	\includegraphics[scale=0.95]{Bilder/vevco2.eps}
-	\caption[Differenzen der \gls{VE}/\gls{VCO2}-Ergebnisse zwischen Ratern und Software]{Differenzen zwischen den Mittelwerten für die VT1 von Ratern und Software durch \gls{VE}/\gls{VCO2}; Mean = Mittelwert von $\Delta$ Rater-Software, SD~=~Standardabweichung}
+	\caption[Differenzen der \gls{VE}/\gls{VCO2}-Ergebnisse zwischen Ratern und Software]{Differenzen zwischen den Mittelwerten für die VT1 von Ratern und Software durch \gls{VE}/\gls{VCO2}; Mean = Mittelwert der Streuung, SD~=~Standardabweichung}
 	\label{pic:pic27}
 \end{figure}
 %
