--- a/header.tex
+++ b/header.tex
@@ -125,6 +125,7 @@ basicstyle=\footnotesize,
 	}%	
 }%
 \setacronymstyle{long-short}
+\glsaddall
 \makeglossaries
 \usepackage[xindy]{imakeidx}
 \makeindex
